# 1142_HCI_FINAL

./: .gitignore  README.md  main.py  pyproject.toml
aniGamerPlus/: .gitignore  README.md  main.py  pyproject.toml
config/: analysis_groups.json
docs/: model_card.md  分工與貢獻.md  情緒分類.md  教師意見.md  新的情緒分類.md  新的文獻探討.md  新的期末計劃書.md  期末報告書.md  期末計劃書.md
logs/14464/: protagonist.jsonl
logs/27444/: protagonist.jsonl
logs/31622/: protagonist.jsonl
logs/7296/: protagonist.jsonl
nlp-emotions-classifer/: .gitignore  main.py  pyproject.toml
nlp-emotions-classifer/scripts/: export_onnx.py
nlp-emotions-classifer/src/emotions_classifier/: __init__.py  classifier.py  model.py
results/: FINDINGS_SUMMARY.md  all_summaries.json  best_rater_selection.json  detailed_analysis.json  inter_rater_reliability.json.bak  rater_danmaku_lsa.json
results/cross_group/: 外掛爽感型_vs_心理折磨型.json  外掛爽感型_vs_搞笑解構型.json  心理折磨型_vs_搞笑解構型.json
results/danmaku_comparison/: danmaku_comparison.json
results/全部_(All)/: adjusted_residuals_lag0.csv  adjusted_residuals_lag1.csv  adjusted_residuals_lag2.csv  cosine_similarities.jsonl  danmaku_distribution.jsonl  emotion_paths_lag0.jsonl  emotion_paths_lag1.jsonl  emotion_paths_lag2.jsonl  protagonist_distribution.jsonl  significant_paths_lag0.jsonl  significant_paths_lag1.jsonl  significant_paths_lag2.jsonl  summary.json  transition_matrix_lag0.csv  transition_matrix_lag1.csv  transition_matrix_lag2.csv  z_scores_lag0.csv  (+2 more)
scripts/: analyze.py  apply_rf_fix.py  compare_danmaku.py  comprehensive_analysis.py  select_best_rater.py  visualize.py
(+123 files in other folders)
