[project]
name = "hci-analysis"
version = "1.0.0"
description = "動畫瘋彈幕下載 + GoEmotions 情緒分類分析工具"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "huggingface-hub>=1.17.0",
    "numpy>=2.2.6",
    "onnxruntime>=1.24.3",
    "tokenizers",
    "scipy>=1.15.3",
    "pandas>=2.3.3",
]

[project.scripts]
hci-analysis = "main:main"

[project.optional-dependencies]
export = [
    "torch>=2.6.0",
    "transformers",
    "onnx>=1.17.0",
]

[tool.uv]
package = false
